--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -32,11 +32,24 @@
   font-weight: 600;
 }
 .menu_list{
-  flex: 1;
+  width: 300px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 100px;
 }
 .menu_list>span{
   font-size: 16px;
   font-weight: 600;
+  cursor: pointer;
+}
+.menu_list>span:hover{
+  color: #10173f;
+}
+.btnGropu{
+  display: flex;
+}
+.record{
+  margin-right: 20px;
 }
 /* .menu_list>span:hover{
  
