--- a/src/styles/frame.css
+++ b/src/styles/frame.css
@@ -1,9 +1,12 @@
+body html{
+  font:12px/1 Tahoma,Helvetica,Arial,"\5b8b\4f53",sans-serif
+}
 .warpper{
   display: flex;
   flex-direction: column;
 }
 .footer{
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0;
   height: 20px;
@@ -37,6 +40,7 @@
   font-size: 8px;
   cursor: pointer;
 }
+
 /* .content{
 
 } */
