fix the home page and get layout modularized

--- a/src/containers/views/styles/loading.css
+++ b/src/containers/views/styles/loading.css
@@ -28,7 +28,7 @@ body,
 html {
   font-family: 'Microsoft YaHei';
   color: #272726;
-  background-color: #212121;
+  /* background-color: #212121; */
   height: 100vh;
   width: 100vw;
 }
