--- a/src/containers/views/private/Blog/BlogEdit/blogEdit.css
+++ b/src/containers/views/private/Blog/BlogEdit/blogEdit.css
@@ -7,6 +7,8 @@
 }
 .blog_edit_form {
   padding: 0 10px 10px 30px;
+  display: flex;
+  justify-content: center;
 }
 .btn_group {
   padding: 20px 0;
@@ -30,15 +32,21 @@
   justify-content: space-between;
 }
 .title {
-  width: 260px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .intro {
-  width: 500px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 .blog_edit_main {
   width: 800px;
 }
 .title_n_intro {
+  display: flex;
+  justify-content: space-between;
 }
 .ant-row {
   display: flex;
